<resources>
    <string name="app_name">Chatter</string>
    <string name="image_of_the_logo">Image of the logo</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="chatter">Chatter</string>
    <string name="hey_there_create_an_account">Hey there 😊\nCreate an account</string>
    <string name="sing_up">Sing up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup_error">An error has occurred. Account was not made</string>
    <string name="welcome_back">Welcome Back👋</string>
    <string name="signinerror">Email or Password is wrong. Please try again</string>
    <string name="what_should_we_call_you">What should we call you?\n🧐</string>
    <string name="username">username</string>
    <string name="next_name">next 👉</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="pick_a_profile_picture">Pick a profile picture\n 🤳</string>
    <string name="skip">skip 😔</string>
    <string name="upload">upload 🤗</string>
    <string name="password_must_contain_at_least_8_characters_1_uppercase_1_lowercase_1_number_and_1_special_character">Password must contain at least 8 characters, 1 uppercase, 1 lowercase, 1 number and 1 special character</string>
    <string name="no_recent_chats">No recent chats</string>
    <string name="search_button">search button</string>
    <string name="logout_button">logout button</string>
    <string name="search">Search...</string>
    <string name="no_user_found">No user found</string>
    <string name="message">Message...</string>
    <string name="image_of_your_profile_picture">Image of your profile picture</string>
    <string name="quote">Nothing is impossible, the word itself says \'I\'m possible\'!</string>
    <string name="legal">Legal</string>
    <string name="your_birthday">Your birthday 🎁</string>
    <string name="dd">dd</string>
    <string name="mm">mm</string>
    <string name="yy">yy</string>
    <string name="yyyy">yyyy</string>
    <string name="legal_title">Legal</string>
    <string name="text_of_my_app_name_chatter">Text of my app name Chatter</string>
    <string name="this_is_the_sign_in_button">This is the sign in button</string>
    <string name="this_is_the_sign_up_button">This is the sign up button</string>
    <string name="illustration_of_people">Illustration of people</string>
    <string name="input_your_email_address">Input your email address</string>
    <string name="sign_up_button">Sign Up Button</string>
    <string name="send_button">Send button</string>
    <string name="your_profile_picture">Your profile picture</string>
    <string name="add_a_profile_picture">Add a profile picture</string>
    <string name="go_to_the_next_screen">Go to the next screen</string>
    <string name="skip_adding_a_profile_picture_and_go_to_the_next_screen">Skip adding a profile picture and go to the next screen</string>
    <string name="illustration_of_people_messaging">Illustration of people messaging</string>
    <string name="image_of_the_user">Image of the user</string>
</resources>