<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context="domains.brighton.mf600.chatter.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/main_progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminateTint="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="30dp"
            android:contentDescription="@string/image_of_the_logo"
            android:elevation="35dp"
            android:src="@drawable/img_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chatter"
            android:textColor="@color/grey"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_logo" />

        <Button
            android:id="@+id/main_login_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="60dp"
            android:background="@drawable/btn_grey"
            android:contentDescription="@string/this_is_the_sign_in_button"
            android:elevation="35dp"
            android:text="@string/sign_in"
            android:textColor="@color/background"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/main_or"
            app:layout_constraintBottom_toTopOf="@id/main_sign_up_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_title"
            app:layout_constraintVertical_bias="1"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/main_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="35dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/main_sign_up_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_login_btn" />

        <Button
            android:id="@+id/main_sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="60dp"
            android:background="@drawable/btn_transparent"
            android:contentDescription="@string/this_is_the_sign_up_button"
            android:elevation="35dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>