<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context=".ProfilePicture">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/uploading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminateTint="@color/grey"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/pick_a_profile_picture"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/add_a_profile_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/add_pp"
            app:layout_constraintBottom_toTopOf="@id/profile_upload_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_title"
            app:shapeAppearanceOverlay="@style/round" />

        <Button
            android:id="@+id/profile_upload_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="60dp"
            android:background="@drawable/btn_transparent"
            android:contentDescription="@string/go_to_the_next_screen"
            android:elevation="35dp"
            android:text="@string/next_name"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/profile_skip_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/profile_skip_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="60dp"
            android:background="@drawable/btn_grey"
            android:contentDescription="@string/skip_adding_a_profile_picture_and_go_to_the_next_screen"
            android:elevation="35dp"
            android:text="@string/skip"
            android:textColor="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>