<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context="domains.brighton.mf600.chatter.Username">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/what_should_we_call_you"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/username_img"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="72dp"
            android:contentDescription="@string/illustration_of_people_messaging"
            android:src="@drawable/username_img"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/username_title" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:autofillHints="username"
            android:background="@drawable/rounded_edittext"
            android:elevation="35dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_img" />

        <Button
            android:id="@+id/username_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="60dp"
            android:background="@drawable/btn_transparent"
            android:contentDescription="@string/go_to_the_next_screen"
            android:elevation="35dp"
            android:text="@string/next_name"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_input"
            app:layout_constraintVertical_bias="0.917" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>