<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="domains.brighton.mf600.chatter.List">

    <ProgressBar
        android:id="@+id/list_progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:indeterminateTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_no_chats"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/no_recent_chats"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_hello_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/grey"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="7dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_hello_text" />

    <ImageButton
        android:id="@+id/list_search_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/neo"
        android:contentDescription="@string/search_button"
        android:elevation="10dp"
        android:src="@drawable/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/layout_pp_container"
        app:layout_constraintRight_toLeftOf="@+id/list_logout_button" />

    <ImageButton
        android:id="@+id/list_logout_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/neo"
        android:contentDescription="@string/logout_button"
        android:elevation="10dp"
        android:src="@drawable/baseline_exit_to_app_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/list_search_btn"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/layout_pp_container"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/neo"
        android:elevation="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/list_search_btn">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/list_pp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/your_profile_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_account_circle_24"
            app:shapeAppearanceOverlay="@style/round" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>